75% styling done with About page. The four grid with the dashed line under the button is in place. The grid is in proper order. I don't remember exactly how i got there but at first 2 of the sections were mix matched and I ended up fiddling with the width of a div container to get it in order. Next I will space the h3s from the image and style the button correctly, and then it will be on to the Let's work together section and then final review and possible time for stretch

--- a/css/index.css
+++ b/css/index.css
@@ -22,7 +22,7 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
     vertical-align: baseline;
-    border:1px solid grey;
+    /* border:1px solid grey; */
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -270,4 +270,33 @@ a:visited {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+/*About page code goes here*/
+hr{
+    margin: 1% 27%;
+    border:0.5px dashed black;
+}
+/*Four square grid code goes here*/
+.colsect{
+    display:flex;
+    /* border:1px solid red; */
+    justify-content: center;
+    align-items: center;
+    flex-flow: column;
+}
+.column{
+    width: 45%;
+    display:flex;
+    
+    /* border:1px solid green;*/
+} 
+.colbox{
+    margin-right:5%;
+    border-bottom:0.5px dashed black;  
+}
+.colbox img{
+    margin-top: 5%;
+}
+button{
+    margin:5% auto;
 }
